test/fails/func_args_num.imp.convert
(
  (main (n)
    (0
       (lc r0 0)
       (st a r0)
       (br r0 1 1) )
    (1
       (ld r1 a)
       (call r2 oneplace r1)
       (st a r2)
       (call r3 oneplace )
       (st a r3)
       (ld r4 a)
       (ld r5 a)
       (call r6 oneplace r4 r5)
       (st a r6)
       (ld r7 a)
       (ld r8 a)
       (call r9 twoplace r7 r8)
       (st a r9)
       (ld r10 a)
       (call r11 twoplace r10)
       (st a r11)
       (ld r12 a)
       (ld r13 a)
       (ld r14 a)
       (call r15 twoplace r12 r13 r14)
       (st a r15)
       (call r16 twoplace )
       (st a r16) )
  )
  (oneplace (n)
    (0
       (lc r0 0)
       (br r0 1 1) )
  )
  (twoplace (n m)
    (0
       (lc r0 0)
       (br r0 1 1) )
  )
)
